--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="9G0fz1gXkwYUIX-VktccpoxwndEmJfsxb4X47FD7w34" />
+    <meta name="google-site-verification" content="qfj0ULOpz8ngzlfbh1ebVjQaMkB4zsJA4KjiXEVO7Vs" />
     <meta name="description" content="Professional appliance repair services in Orlando, Florida. Reliable, fast, and affordable solutions for all your home appliances.">
     <title>Appliance Repair Orlando Florida | Reliable Appliance Services</title>
 </head>
@@ -23,5 +24,6 @@
     </article>
 </body>
 </html>
+
 
 
