--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="8h2kwTSmg_bcXcdTQAAN59T2nDiY8AGE64WeZbhzkeo" />
     <meta name="google-site-verification" content="9G0fz1gXkwYUIX-VktccpoxwndEmJfsxb4X47FD7w34" />
     <meta name="google-site-verification" content="qfj0ULOpz8ngzlfbh1ebVjQaMkB4zsJA4KjiXEVO7Vs" />
     <meta name="google-site-verification" content="53k-MPiTr6QNJ1V336USe9WTbu3QNCLR2SpU3SmmSdc" />
@@ -25,6 +26,7 @@
     </article>
 </body>
 </html>
+
 
 
 
